--- a/src/main/webapp/pages/DevFormDataEntry/DevFormDataEntry.html
+++ b/src/main/webapp/pages/DevFormDataEntry/DevFormDataEntry.html
@@ -6,92 +6,89 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-tabs name="tabs1">
                 <wm-tabpane name="tabpane6" title="MasterForms">
-                    <wm-livegrid formlayout="dialog" name="livegrid6">
-                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Masterforms List" dataset="bind:Variables.Cx2MasterFormsData.dataSet" navigation="Classic" name="grid6" filtermode="multicolumn" exportformat="EXCEL">
-                            <wm-grid-column binding="formGuid" caption="Form Guid" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="closed" caption="Closed" type="boolean" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="formTypes.id" caption="Types Id" type="integer" primary-key="true" generator="identity" show="true" related-entity-name="FormTypes" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="formTypes.formType" caption="Form Type" type="string" generator="assigned" readonly="true" show="true" related-entity-name="FormTypes"></wm-grid-column>
-                            <wm-grid-column binding="formStatuses.status" caption="Statuses Status" type="string" generator="assigned" readonly="true" show="true" related-entity-name="FormStatuses"></wm-grid-column>
-                            <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
-                            <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                            <wm-grid-column binding="formTypes.createdDate" caption="Created Date" type="date" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="FormTypes"></wm-grid-column>
-                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                            <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
-                            <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
-                            <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                    <wm-livegrid formlayout="dialog" name="livegrid7">
+                        <wm-grid gridfirstrowselect="true" editmode="dialog" title="Masterforms List" dataset="bind:Variables.Cx2MasterFormsData.dataSet" navigation="Classic" name="grid7">
+                            <wm-grid-column binding="formGuid" caption="Form Guid" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" primary-key="true"></wm-grid-column>
+                            <wm-grid-column binding="closed" caption="Closed" generator="assigned" pcdisplay="true" mobiledisplay="true" type="boolean"></wm-grid-column>
+                            <wm-grid-column binding="formTitle" caption="Form Title" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
+                            <wm-grid-column binding="formTypes.formType" caption="Form Type" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="FormTypes" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="formStatuses.status" caption="Statuses Status" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="FormStatuses" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Municipalities" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="users.email" caption="Users Email" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Users" readonly="true"></wm-grid-column>
+                            <wm-grid-column binding="vendor.companyName" caption="Company Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Vendor" readonly="true"></wm-grid-column>
+                            <wm-grid-action key="addNewRow" display-name="New" iconclass="wi wi-plus" show="true" class="btn-primary" action="addNewRow()" position="footer" shortcutkey=""></wm-grid-action>
+                            <wm-grid-row-action key="updaterow" display-name="" title="Edit" iconclass="wi wi-pencil" show="true" class="btn-transparent" action="editRow()"></wm-grid-row-action>
+                            <wm-grid-row-action key="deleterow" display-name="" title="Delete" iconclass="wi wi-trash" show="true" class="btn-transparent" action="deleteRow()"></wm-grid-row-action>
                         </wm-grid>
-                        <wm-liveform novalidate="false" errormessage="" title="Masterforms Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.Cx2MasterFormsData.dataSet" captionalign="left" captionposition="top" name="liveform6">
-                            <wm-layoutgrid columns="3" name="layoutgrid6">
-                                <wm-gridrow name="gridrow21">
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn61">
-                                        <wm-form-field name="formGuid" displayname="Form Guid" required="false" show="true" generator="assigned" primary-key="false" key="formGuid" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                        <wm-liveform novalidate="false" errormessage="" title="Masterforms Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.Cx2MasterFormsData.dataSet" captionalign="left" captionposition="top" name="liveform7">
+                            <wm-layoutgrid columns="3" name="layoutgrid7">
+                                <wm-gridrow name="gridrow26">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn76">
+                                        <wm-form-field name="formGuid" displayname="Form Guid" required="true" show="true" generator="assigned" primary-key="true" key="formGuid" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                                         widget="text"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn62">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn77">
                                         <wm-form-field name="closed" displayname="Closed" required="false" show="true" generator="assigned" primary-key="false" key="closed" type="boolean" is-related="false" pc-display="true" mobile-display="true" widget="checkbox"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn63">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn78">
                                         <wm-form-field name="totalFees" displayname="Total Fees" required="false" show="true" generator="assigned" primary-key="false" key="totalFees" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                                         widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow22">
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn64">
+                                <wm-gridrow name="gridrow27">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn79">
                                         <wm-form-field name="totalPayment" displayname="Total Payment" required="false" show="true" generator="assigned" primary-key="false" key="totalPayment" type="string" is-related="false" maxchars="255" pc-display="true"
                                         mobile-display="true" widget="text"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn65">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn80">
                                         <wm-form-field name="balanceDue" displayname="Balance Due" required="false" show="true" generator="assigned" primary-key="false" key="balanceDue" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                                         widget="text"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn66">
-                                        <wm-form-field name="cxvendorId" displayname="Cxvendor Id" required="false" show="true" generator="assigned" primary-key="false" key="cxvendorId" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true"
-                                        widget="number"></wm-form-field>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow23">
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn67">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn81">
                                         <wm-form-field name="recordType" displayname="Record Type" required="false" show="true" generator="assigned" primary-key="false" key="recordType" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                                         widget="text"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn68">
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow28">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn82">
                                         <wm-form-field name="issuedDate" displayname="Issued Date" required="false" show="true" generator="assigned" primary-key="false" key="issuedDate" type="date" is-related="false" pc-display="true" mobile-display="true"
                                         widget="date"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn69">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn83">
                                         <wm-form-field name="expiresDate" displayname="Expires Date" required="false" show="true" generator="assigned" primary-key="false" key="expiresDate" type="date" is-related="false" pc-display="true" mobile-display="true"
                                         widget="date"></wm-form-field>
                                     </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow24">
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn70">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn84">
                                         <wm-form-field name="formTitle" displayname="Form Title" required="false" show="true" generator="assigned" primary-key="false" key="formTitle" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                                         widget="text"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn71">
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow29">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn85">
                                         <wm-form-field name="formTypes" displayname="Form Types" required="false" show="true" generator="assigned" primary-key="false" key="formTypes" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn72">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn86">
                                         <wm-form-field name="formStatuses" displayname="Form Statuses" required="false" show="true" generator="assigned" primary-key="false" key="formStatuses" type="list" is-related="true" pc-display="true" mobile-display="true"
                                         widget="select"></wm-form-field>
                                     </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow25">
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn73">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn87">
                                         <wm-form-field name="municipalityGroups" displayname="Municipality Groups" required="false" show="true" generator="assigned" primary-key="false" key="municipalityGroups" type="list" is-related="true" pc-display="true"
                                         mobile-display="true" widget="select"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn74">
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow30">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn88">
                                         <wm-form-field name="municipalities" displayname="Municipalities" required="false" show="true" generator="assigned" primary-key="false" key="municipalities" type="list" is-related="true" pc-display="true" mobile-display="true"
                                         widget="select"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn75">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn89">
                                         <wm-form-field name="users" displayname="Users" required="false" show="true" generator="assigned" primary-key="false" key="users" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn90">
+                                        <wm-form-field name="vendor" displayname="Vendor" required="false" show="true" generator="assigned" primary-key="false" key="vendor" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
-                            <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
                             <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
                             <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
                         </wm-liveform>
