--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -32,8 +32,8 @@
                                     <wm-layoutgrid columns="2" name="layoutgrid1">
                                         <wm-gridrow name="gridrow1">
                                             <wm-gridcolumn columnwidth="6" name="gridcolumn1">
-                                                <wm-form-field name="municipalityName" displayname="Municipality Name" show="true" primary-key="false" generator="assigned" key="municipalityName" type="string" widget="text" maxchars="255" inputtype="text"
-                                                placeholder="Enter value" required="true"></wm-form-field>
+                                                <wm-form-field name="municipalityName" displayname="Municipality Name" show="true" primary-key="false" generator="assigned" key="municipalityName" type="string" required="required" widget="text" maxchars="255"
+                                                inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="6" name="gridcolumn2">
                                                 <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -61,7 +61,7 @@
                                                 <wm-form-field name="phone" displayname="Phone" show="true" primary-key="false" generator="assigned" key="phone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="6" name="gridcolumn8">
-                                                <wm-form-field name="email" displayname="Email" show="true" primary-key="false" generator="assigned" key="email" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" required="true"></wm-form-field>
+                                                <wm-form-field name="email" displayname="Email" show="true" primary-key="false" generator="assigned" key="email" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow5">
@@ -127,21 +127,22 @@
                                                 <wm-form-field name="active" displayname="Active" show="true" primary-key="false" generator="assigned" key="active" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn name="gridcolumn1" columnwidth="6">
-                                                <wm-form-field name="dbName" displayname="Db Name" show="true" primary-key="false" generator="assigned" key="dbName" type="string" widget="text" maxchars="255"></wm-form-field>
+                                                <wm-form-field name="dbName" displayname="Db Name" show="true" primary-key="false" generator="assigned" key="dbName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow1">
                                             <wm-gridcolumn name="gridcolumn2" columnwidth="6">
-                                                <wm-form-field name="dbUser" displayname="Db User" show="true" primary-key="false" generator="assigned" key="dbUser" type="string" widget="text" maxchars="255"></wm-form-field>
+                                                <wm-form-field name="dbUser" displayname="Db User" show="true" primary-key="false" generator="assigned" key="dbUser" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn name="gridcolumn3" columnwidth="6">
-                                                <wm-form-field name="dbPassword" displayname="Db Password" show="true" primary-key="false" generator="assigned" key="dbPassword" type="string" widget="text" maxchars="255"></wm-form-field>
+                                                <wm-form-field name="dbPassword" displayname="Db Password" show="true" primary-key="false" generator="assigned" key="dbPassword" type="string" widget="password" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                                     <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="false" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID"
                                     disabled="true" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
+                                    placeholder=""></wm-form-field>
                                     <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                     <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                                 </wm-liveform>
